# playground

./: .dir-locals.el  .gitignore  Gemfile  README.md  Rakefile  play  play.rb
MyPlayground.playground/: Contents.swift
beautiful-racket/: stacker-example.stacker  stacker-lang.rkt  stacker-test.stacker  stacker.rkt
cis_194_spring_13/: cis194Spring13.cabal  hw1.hs  readme
elm-reactivity-tutorial/: GetCurrentTime.elm  SomeMailbox.elm  TimeEverySecond.elm  index.html
haskellbook/: Makefile  README.md  haskellbook.cabal  package.yaml  stack.yaml
haskellbook/app/: HitCounter.hs  Main.hs  Morra.hs  Morra1.hs  Shawty.hs
haskellbook/hangman/: hangman.cabal
haskellbook/hangman/src/: Main.hs
haskellbook/src/: Algebra14.hs  BinaryTree11_14.hs  Chapter08.hs  Chapter09.lhs  Chapter10.hs  Chapter10.lhs  Chapter11.hs  Chapter11.lhs  Chapter12.hs  Chapter13.hs  Chapter14.hs  Chapter15.hs  Chapter16.hs  Chapter17.hs  Chapter18.hs  Chapter20.hs  Chapter21.hs  Chapter22.hs  Chapter23.hs  Chapter24.hs  Chapter25.hs  Chapter26.hs  Chapter26Excite.hs  Chapter27.hs  Chapter27StrictList.hs  Chapter28.hs  Hangman.hs  Lib.hs  Morse.hs  TestLib.lhs  Workspace.hs
haskellbook/test/: Spec.hs
how_to_prove_it/: chapter1.org
lean-tutorial/: first.lean
learning/: castingSPELS.el
leetcode/: arithmetic-slices-413.js  battleships-in-a-board.js  count-of-smaller-numbers-after-self-315.js  counting-bits-338.js  queue-reconstruction-by-height-406.js
lispjs/: elm  test.js  tinylisp.js  tinylisptest.js
metaprogramming_ruby/: play_metaprogramming_ruby.rb
pollen-experimentation/: article.html.pmd  burial.html.pm  hello.txt.pp  poem.html  (+4 more)
(+191 files in other folders)
