name:                haskellbook
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/value/haskellbook#readme
license:             BSD3
license-file:        LICENSE
author:              value
maintainer:          value
copyright:           value
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chapter09
                     , Chapter10
                     , Chapter11
                     , Chapter12
                     , Chapter13
                     , Hangman
                     , Chapter14
                     , Workspace
                     , TestLib
  build-depends:       base >= 4.7 && < 5
                     , time
                     , hspec
                     , QuickCheck
                     , random
                     , split
  default-language:    Haskell2010

executable haskellbook
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskellbook
  default-language:    Haskell2010

test-suite haskellbook-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskellbook
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
